# JavaJniDemo

./: .gitignore  README.md  gen.sh
java/com/demon/jni/: TestJni.java
jni/: CMakeLists.txt  TestJni.cpp  TestJni.h
